[增加JVM]